--- a/package.json
+++ b/package.json
@@ -6,24 +6,48 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint && stylelint src/**/*.css",
+    "lint-fix": "next lint --fix && stylelint --fix src/**/*.css",
+    "lint:css": "stylelint --fix src/**/*.css",
+    "typecheck": "tsc --noEmit",
+    "ci": "npm run lint && npm run typecheck && npm run lint:css",
+    "build:css-vars": "style-dictionary build --config ./.style-dictionary.config.js",
+    "build:icons": "npx svg-sprite -s --symbol-dest public/img --symbol-sprite icons.svg src/assets/icons/*.svg"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/three": "^3.0.3",
     "@next/font": "13.1.6",
+    "@types/google.maps": "^3.52.1",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/three": "^0.149.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.11",
     "next": "13.1.6",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^8.0.1",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "style-dictionary": "^3.7.2",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard": "^30.0.1",
     "three": "^0.150.1",
-    "typescript": "4.9.5",
-    "@types/google.maps": "^3.52.1"
+    "typescript": "4.9.5"
   }
 }
