--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,8 @@
 {
-    "extends": ["stylelint-config-standard", "stylelint-config-recess-order"],
-    "rules": {
-        "no-descending-specificity": null,
-        "max-line-length": [120, {
-            "ignore": ["comments"]
-        }],
-        "selector-class-pattern": null
-    }
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"],
+  "rules": {
+    "no-descending-specificity": null,
+    "max-line-length": [120, { "ignore": ["comments"] }],
+    "selector-class-pattern": null
+  }
 }
