--- a/package.json
+++ b/package.json
@@ -6,15 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "storybook": "storybook dev -p 6006",
     "lint": "next lint && stylelint src/**/*.css",
     "lint-fix": "next lint --fix && stylelint --fix src/**/*.css",
     "lint:css": "stylelint --fix src/**/*.css",
     "typecheck": "tsc --noEmit",
+    "prettier": "prettier --write **/*.json",
     "ci": "npm run lint && npm run typecheck && npm run lint:css",
     "build:css-vars": "style-dictionary build --config ./.style-dictionary.config.js",
-    "build:icons": "npx svg-sprite -s --symbol-dest public/img --symbol-sprite icons.svg src/assets/icons/*.svg"
+    "build:icons": "npx svg-sprite -s --symbol-dest public/img --symbol-sprite icons.svg src/assets/icons/*.svg",
+    "build:storybook": "storybook build"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
+    "@storybook/addon-a11y": "7.0.0-beta.43",
+    "@storybook/addon-essentials": "7.0.0-beta.43",
+    "@storybook/addon-interactions": "7.0.0-beta.43",
+    "@storybook/addon-links": "7.0.0-beta.43",
+    "@storybook/nextjs": "7.0.0-beta.43",
     "@googlemaps/js-api-loader": "^1.15.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/three": "^3.0.3",
@@ -30,6 +41,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-standard-react": "^13.0.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
@@ -43,6 +55,7 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "storybook": "7.0.0-beta.43",
     "style-dictionary": "^3.7.2",
     "stylelint": "^15.2.0",
     "stylelint-config-recess-order": "^4.0.0",
