--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@googlemaps/three": "^3.0.3",
+    "@next/font": "13.1.6",
     "@storybook/addon-a11y": "7.0.0-beta.43",
     "@storybook/addon-essentials": "7.0.0-beta.43",
     "@storybook/addon-interactions": "7.0.0-beta.43",
     "@storybook/addon-links": "7.0.0-beta.43",
     "@storybook/nextjs": "7.0.0-beta.43",
-    "@googlemaps/js-api-loader": "^1.15.1",
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@googlemaps/three": "^3.0.3",
-    "@next/font": "13.1.6",
     "@types/google.maps": "^3.52.1",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -51,7 +51,7 @@
     "next": "13.1.6",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^8.0.1",
+    "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -60,6 +60,7 @@
     "stylelint": "^15.2.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^30.0.1",
+    "the-new-css-reset": "^1.8.4",
     "three": "^0.150.1",
     "typescript": "4.9.5"
   }
