refactor: use utility class for reusable code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
       ],
       "@/hooks/*": [
         "./src/lib/hooks/*"
+      ],
+      "@/utils/*": [
+        "./utils/*"
       ]
     },
     "plugins": [
