docs: move buurtmap utils to src/helpers/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
         "./src/lib/hooks/*"
       ],
       "@/utils/*": [
-        "./utils/*"
+        "./src/helpers/utils/*"
       ]
     },
     "plugins": [
