docs: move custom project interface types in separate dir 'src/types'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
       ],
       "@/utils/*": [
         "./src/helpers/utils/*"
+      ],
+      "@/types/*": [
+        "./src/types/*"
       ]
     },
     "plugins": [
