--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
+      "@components/*": [
+        "./src/components/*"
+      ],
       "@/*": [
         "./src/*"
       ],
