feat: add css variables

--- a/.style-dictionary/config.json
+++ b/.style-dictionary/config.json
@@ -13,7 +13,7 @@
             "buildPath": "src/assets/styles/",
             "files": [
                 {
-                    "destination": "variables.scss",
+                    "destination": "variables.css",
                     "format": "css/variables"
                 }
             ],
