--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@googlemaps/js-api-loader": "^1.15.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/three": "4.0.0",
-    "@next/font": "13.1.6",
     "@storybook/addon-a11y": "7.0.0-beta.43",
     "@storybook/addon-essentials": "7.0.0-beta.43",
     "@storybook/addon-interactions": "7.0.0-beta.43",
@@ -40,7 +39,7 @@
     "@typescript-eslint/parser": "^5.54.0",
     "clsx": "^1.2.1",
     "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^13.4.1",
     "eslint-config-standard-jsx": "^11.0.0",
     "eslint-config-standard-react": "^13.0.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
@@ -49,15 +48,15 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.11",
-    "next": "13.1.6",
+    "next": "^13.4.1",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "storybook": "7.0.0-beta.43",
-    "style-dictionary": "^3.7.2",
+    "style-dictionary": "^3.8.0",
     "stylelint": "^15.2.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^30.0.1",
