fix: products to iterable/filterable list of objects construct

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
         "./src/*"
       ],
       "@/helpers/*": [
-        "./src/lib/helpers/*"
+        "./src/helpers/*"
       ],
       "@/services/*": [
         "./src/lib/services/*"
