--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "stylelint": "^15.2.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^30.0.1",
+    "swr": "^2.1.5",
     "the-new-css-reset": "^1.8.4",
     "three": "^0.150.1",
     "typescript": "4.9.5",
