--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@googlemaps/three": "4.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@storybook/addon-a11y": "7.0.0-beta.43",
     "@storybook/addon-essentials": "7.0.0-beta.43",
     "@storybook/addon-interactions": "7.0.0-beta.43",
