--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/three": "4.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@storybook/addon-a11y": "7.0.0-beta.43",
