--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@googlemaps/three": "4.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@storybook/addon-a11y": "7.0.0-beta.43",
     "@storybook/addon-essentials": "7.0.0-beta.43",
     "@storybook/addon-interactions": "7.0.0-beta.43",
@@ -59,6 +60,7 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "storybook": "7.0.0-beta.43",
     "style-dictionary": "^3.8.0",
     "stylelint": "^15.2.0",
