--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "storybook": "7.0.0-beta.43",
     "style-dictionary": "^3.8.0",
     "stylelint": "^15.2.0",
@@ -70,6 +71,7 @@
     "the-new-css-reset": "^1.8.4",
     "three": "^0.150.1",
     "typescript": "4.9.5",
+    "yup": "^1.2.0",
     "zustand": "^4.3.6"
   }
 }
