--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-storybook": "^0.6.11",
     "next": "^13.4.1",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.12.0",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^7.8.3",
